# zerok-stack

./: .bazelrc  .gitmodules  BUILD.bazel  WORKSPACE
toolchain/: BUILD.bazel  CROSSTOOL  osx_ar_wrapper.sh  osx_cc_wrapper.sh
