package(default_visibility = ["//visibility:public"])

cc_toolchain_suite(
    name = "default-toolchain",
    toolchains = {
        "amd64|gcc": ":cc-compiler-darwin",
    },
)

cc_toolchain(
    name = "cc-compiler-darwin",
    all_files = ":osx_wrapper",
    ar_files = ":empty",
    as_files = ":empty",
    compiler_files = ":osx_wrapper",
    cpu = "darwin",
    dwp_files = ":empty",
    dynamic_runtime_libs = [":empty"],
    linker_files = ":osx_wrapper",
    objcopy_files = ":empty",
    static_runtime_libs = [":empty"],
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_identifier = "local_darwin",
)

filegroup(name = "empty")

filegroup(
    name = "osx_wrapper",
    srcs = ["osx_cc_wrapper.sh"],
)
